BuildUtils tweaks